[Material][Mac] Fixed EV chip's dark theme colors

Use hasDarkTheme instead of inIncognitoModeWithSystemTheme so that the chip gets the correct value.

BUG=629995

Review-Url: https://codereview.chromium.org/2241943002
Cr-Commit-Position: refs/heads/master@{#411994}

Former-commit-id: f54c0238952086f5cf5c3dce0f5bdbf88a6d4d72